tests/errors/bare_tag.error
parse error at line 1 column 6 for Tag:
[tag]
     ^